# nixpkgs-python

./: .gitignore  README.md  devenv.nix  flake.nix  foo.nix  pyproject.toml  renovate.json  self.nix  update.py  versions.json
.github/workflows/: build.yml  release.yml  update.yml
patches/: 2.6-no-ldconfig.patch  2.7-get-entropy-macos.patch  3.5-incompatible-types-atomic-pointers.patch  3.5-pythreadstate-uncheckedget.patch  3.6-no-ldconfig.patch  getentropy.patch  segfault.patch
patches/2.7/: 20ea5b46-openssl-revert.patch  re_match_index.patch
patches/3.10/: distutils-C++.patch
patches/3.4/: distutils-C++.patch  getentropy.patch
patches/3.5/: get-entropy-macos.patch  os-random-prepatch.patch
patches/3.6/: distutils-C++-post-3.6.7.patch  ensurepip-1.patch  ensurepip-2.patch
patches/3.7/: distutils-C++-pre-3.7.3.patch
patches/3.8/: distutils-C++.patch
patches/3.9/: distutils-C++.patch
patches/shared/: fix-darwin-compilation.patch
scripts/: check-with-summary.py  check-with-summary.sh  check_with_summary.py  json-to-summary.py  json-to-summary.sh  json_to_summary.py  sync_patches.py  update.py
